Тест ридми файла

--- a/FirstMeetSQL/FirstMeetSQL.vcxproj.filters
+++ b/FirstMeetSQL/FirstMeetSQL.vcxproj.filters
@@ -25,4 +25,7 @@
       <Filter>Файлы ресурсов</Filter>
     </ClCompile>
   </ItemGroup>
+  <ItemGroup>
+    <None Include="..\README.md" />
+  </ItemGroup>
 </Project>
