--- a/FirstMeetSQL/FirstMeetSQL.vcxproj
+++ b/FirstMeetSQL/FirstMeetSQL.vcxproj
@@ -127,6 +127,9 @@
     <ClCompile Include="sqlite\shell.c" />
     <ClCompile Include="sqlite\sqlite3.c" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="..\README.md" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
