альфа версия main.cpp

--- a/FirstMeetSQL/FirstMeetSQL.vcxproj
+++ b/FirstMeetSQL/FirstMeetSQL.vcxproj
@@ -124,6 +124,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="FirstMeetSQL.cpp" />
+    <ClCompile Include="main.cpp" />
     <ClCompile Include="sqlite\shell.c" />
     <ClCompile Include="sqlite\sqlite3.c" />
   </ItemGroup>
