--- a/FirstMeetSQL/FirstMeetSQL.vcxproj.filters
+++ b/FirstMeetSQL/FirstMeetSQL.vcxproj.filters
@@ -24,6 +24,9 @@
     <ClCompile Include="sqlite\sqlite3.c">
       <Filter>Файлы ресурсов</Filter>
     </ClCompile>
+    <ClCompile Include="main.cpp">
+      <Filter>Исходные файлы</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <None Include="..\README.md" />
