директор, main.cpp, файл для "мусора"

--- a/FirstMeetSQL/FirstMeetSQL.vcxproj
+++ b/FirstMeetSQL/FirstMeetSQL.vcxproj
@@ -124,9 +124,10 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="FirstMeetSQL.cpp" />
-    <ClCompile Include="main.cpp" />
+    <ClCompile Include="main_and_boss.cpp" />
     <ClCompile Include="sqlite\shell.c" />
     <ClCompile Include="sqlite\sqlite3.c" />
+    <ClCompile Include="trashbin.cpp" />
   </ItemGroup>
   <ItemGroup>
     <None Include="..\README.md" />
