--- a/FirstMeetSQL/FirstMeetSQL.vcxproj.filters
+++ b/FirstMeetSQL/FirstMeetSQL.vcxproj.filters
@@ -24,7 +24,10 @@
     <ClCompile Include="sqlite\sqlite3.c">
       <Filter>Файлы ресурсов</Filter>
     </ClCompile>
-    <ClCompile Include="main.cpp">
+    <ClCompile Include="main_and_boss.cpp">
+      <Filter>Исходные файлы</Filter>
+    </ClCompile>
+    <ClCompile Include="trashbin.cpp">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
   </ItemGroup>
