примитивная авторизация, аккаунт директора

--- a/FirstMeetSQL/FirstMeetSQL.vcxproj
+++ b/FirstMeetSQL/FirstMeetSQL.vcxproj
@@ -124,7 +124,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="FirstMeetSQL.cpp" />
-    <ClCompile Include="main_and_boss.cpp" />
+    <ClCompile Include="main.cpp" />
     <ClCompile Include="sqlite\shell.c" />
     <ClCompile Include="sqlite\sqlite3.c" />
     <ClCompile Include="trashbin.cpp" />
